--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,12 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  firebase_auth: ^3.2.0
+  firebase_core: ^1.10.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^7.3.3
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
@@ -20,9 +24,8 @@ flutter:
   uses-material-design: true
 
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+    # - assets/images/
+  fonts:
+    - family: poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
