--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^7.3.3
+  flutter_svg: ^0.23.0+1
   http: ^0.13.4
 
 dev_dependencies:
@@ -23,8 +24,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-    # - assets/images/
+  assets:
+    - assets/images/
   fonts:
     - family: poppins
       fonts:
