--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^7.3.3
+  flutter_riverpod: ^1.0.0
   flutter_svg: ^0.23.0+1
   http: ^0.13.4
 
