--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_riverpod: ^1.0.0
   flutter_svg: ^0.23.0+1
   http: ^0.13.4
+  riverpod: ^1.0.0
 
 dev_dependencies:
   flutter_test:
