--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_svg: ^0.23.0+1
   http: ^0.13.4
   riverpod: ^1.0.0
+  timelines: ^0.1.0
 
 dev_dependencies:
   flutter_test:
